--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-use-websocket": "^2.4.1",
+    "socket.io-client": "^3.1.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
