--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.7.4",
+    "@devexpress/dx-react-grid": "^2.7.4",
+    "@devexpress/dx-react-grid-material-ui": "^2.7.4",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "electron": "^11.2.3",
+    "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "react-use-websocket": "^2.4.1",
     "socket.io-client": "^3.1.1",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "devextreme": "^20.2.4",
+    "devextreme-react": "20.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "devextreme-themebuilder": "^20.2.4"
   }
 }
