--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "devextreme": "^20.2.4",
+    "devextreme-react": "20.2.3",
     "electron": "^11.2.3",
     "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
     "react-use-websocket": "^2.4.1",
     "socket.io-client": "^3.1.1",
-    "web-vitals": "^1.1.0",
-    "devextreme": "^20.2.4",
-    "devextreme-react": "20.2.3"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
